# rust-arch

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  fly.toml
.github/workflows/: deploy.yml  fly.toml
migrations/2024-07-20-030410_create_user/: up.sql
src/: errors.rs  main.rs  schema.rs
src/app/use_cases/: get_user.rs  register_user.rs
src/domain/: mod.rs
src/domain/entities/: user.rs
src/domain/repo/: user_repo.rs
src/domain/services/: user_service.rs
src/infras/: mod.rs  web.rs
src/infras/db/: connection.rs
src/infras/repo/: user_repo.rs
src/present/handlers/: user_handler.rs
src/present/middlewares/: auth_middleware.rs
src/present/routes/: user_routes.rs
src/utils/: api_response.rs  jwt.rs  mod.rs
