[package]
name = "clean-arch"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0.204", features = ["derive"] }
async-trait = "0.1.81"
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
actix-web = "4.8.0"
log = "0.4.22"
env_logger = "0.11.3"
thiserror = "1.0.41"
serde_json = "1.0.120"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.20.2"
